// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

enum bank_name {
  None
}

enum account_type {
  None
}

Table "fiscal_accounts" {
  "id" uuid [not null, default: `gen_random_uuid()`]
  "updated_at" timestamp [not null, default: `CURRENT_TIMESTAMP`]
  "account_number" "character varying" [not null]
  "max_sequence_number" bigint [not null, default: 0]
  "transaction_count" bigint [not null, default: 0]
  "type" account_type [not null]
  "institution_name" bank_name [not null]
  "auto_change_updated_at" TRIGGER

  Indexes {
    id [pk, name: "accounts_pkey"]
  }
}

Table "imports" {
  "id" uuid [not null, default: `gen_random_uuid()`]
  "account_id" uuid [not null]
  "import_date" timestamp [not null]
  "source_file_date" timestamp [not null]

  Indexes {
    id [pk, name: "imports_pkey"]
  }
}

Table "seaql_migrations" {
  "version" "character varying" [not null]
  "applied_at" bigint [not null]

  Indexes {
    version [pk, name: "seaql_migrations_pkey"]
  }
}

Table "staged_transactions" {
  "id" uuid [not null, default: `gen_random_uuid()`]
  "import_id" uuid [not null]
  "date" timestamp [not null]
  "amount" real [not null]
  "balance" real [not null]
  "ref_no" "character varying" [not null]
  "description" "character varying" [not null]
  "sequence_number" bigint [not null]

  Indexes {
    id [pk, name: "staged_transactions_pkey"]
    (import_id, sequence_number) [unique, name: "uniq_importid_sequencenumber"]
  }
}

Table "transactions" {
  "id" uuid [not null, default: `gen_random_uuid()`]
  "account_id" uuid [not null]
  "amount" real [not null]
  "balance" real [not null]
  "date" timestamp [not null]
  "description" "character varying" [not null]
  "ref_no" "character varying" [not null]
  "sequence_number" bigint [not null]
  "update_max_sequence_number" TRIGGER
  "update_max_sequence_number_on_delete" TRIGGER
  "update_transaction_count" TRIGGER
  "update_transaction_count_on_delete" TRIGGER

  Indexes {
    id [pk, name: "transactions_pkey"]
    (account_id, sequence_number) [unique, name: "uniq_accountid_sequencenumber"]
  }
}

Ref "fk_import_account_id":"accounts"."id" < "imports"."account_id" [update: cascade, delete: cascade]

Ref "fk_staged_txn_import_id":"imports"."id" < "staged_transactions"."import_id" [update: cascade, delete: cascade]

Ref "fk_txn_account_id":"accounts"."id" < "transactions"."account_id" [update: cascade, delete: cascade]
